fix: overflow is now only for main page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,12 +19,6 @@
   }
 }
 
-html,
-body {
-  overflow: hidden;
-  height: 100%;
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
